updated web build

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       }
 
       createUnityInstance(document.querySelector("#unity-canvas"), {
-        dataUrl: "Build/SpaceExploerWebGL.data.br",
-        frameworkUrl: "Build/SpaceExploerWebGL.framework.js.br",
-        codeUrl: "Build/SpaceExploerWebGL.wasm.br",
+        dataUrl: "Build/SpaceExploerWebGL.data",
+        frameworkUrl: "Build/SpaceExploerWebGL.framework.js",
+        codeUrl: "Build/SpaceExploerWebGL.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "My project",
